--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,16 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Debug (Launch) - FenetrePrincipale",
+            "request": "launch",
+            "mainClass": "application.FenetrePrincipale",
+            "projectName": "Boulder_Dash_DENGLER_KLODZINSKI"
+        },
+        {
+            "type": "java",
             "name": "Debug (Launch) - Current File",
             "request": "launch",
             "mainClass": "testintermediaire.Test",
-            //"mainClass": "application.FenetrePrincipale",
             "projectName": "Boulder_Dash_DENGLER_KLODZINSKI",
             "console": "externalTerminal"
         }
