java 1.8 et javafx 1.8 vers java 11.0.7 et javafx 11.0.2
relou à faire, 5h de recherche mais voilà c'est fait jsuis content de bordel de cul

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "type": "java",
             "name": "Debug (Launch) - FenetrePrincipale",
             "request": "launch",
+            "vmArgs": "--module-path \"C:\\Program Files\\Java\\javafx-sdk-11.0.2\\lib\" --add-modules javafx.controls,javafx.fxml",
             "mainClass": "application.FenetrePrincipale",
             "projectName": "Boulder_Dash_DENGLER_KLODZINSKI"
         }/*,
